--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
@@ -8,7 +8,7 @@
                         {% block sw_grid_slot_header %}
                             <div class="sw-grid__header" :style="[columnFlex, { paddingRight: `${scrollbarOffset}px` }]">
                                 {% block sw_grid_slot_header_cell_selectable %}
-                                    <div class="sw-grid-column" v-if="selectable && allSelectable">
+                                    <div class="sw-grid-column" v-if="selectable">
                                         <div class="sw-grid__cell-content">
                                             <sw-field type="checkbox" v-model="allSelectedChecked" @change="selectAll"></sw-field>
                                         </div>
@@ -60,7 +60,7 @@
                                                      :class="['sw-grid__row--' + index, { 'is--selected': isSelected(item.id), 'is--deleted': item.isDeleted, 'is--new': item.isLocal }]">
 
                                             {% block sw_grid_body_item_selectable %}
-                                                <div class="sw-grid-column sw-grid-column--select" v-if="selectable && showSelectionCheckbox">
+                                                <div class="sw-grid-column" v-if="selectable">
                                                     <div class="sw-grid__cell-content">
                                                         <sw-field type="checkbox" :value="isSelected(item.id)" @change="selectItem($event, item)"></sw-field>
                                                     </div>
