NEXT-1639 - Remove feature flag 1207

--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
@@ -53,7 +53,7 @@
                                 {% endblock %}
 
                                 {% block sw_media_media_item_context_item_move %}
-                                    <sw-context-menu-item v-if="next1207" class="sw-media-context-item__move-media-action"  @click="openModalMove">
+                                    <sw-context-menu-item class="sw-media-context-item__move-media-action"  @click="openModalMove">
                                         {{ $tc('global.sw-media-media-item.labelContextMenuMove') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
