--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -38,8 +38,7 @@
                             {% endblock %}
 
                             {% block sw_media_quickinfo_quickactions_move %}
-                                <li v-if="next1207"
-                                    class="sw-media-sidebar__quickaction quickaction--move"
+                                <li class="sw-media-sidebar__quickaction quickaction--move"
                                     @click="openModalMove">
 
                                     <sw-icon small name="default-action-move-file" class="sw-media-sidebar__quickactions-icon"></sw-icon>
