--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -15,8 +15,7 @@
         {% block sw_media_index_smart_bar %}
             {% block sw_media_index_bread_crumb_navigation %}
                 <div slot="smart-bar-back"
-                     class="sw-media-index__navigation"
-                     v-if="next1207">
+                     class="sw-media-index__navigation">
 
                     <template v-if="parentFolder">
                          {% block sw_media_index_bread_crumb_navigation_icon %}
