--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
@@ -9,8 +9,7 @@
                 {% block sw_media_quickinfo_multiple_quickactions_content %}
                     <ul slot="content" class="sw-media-sidebar__quickactions-list">
                         {% block sw_media_quickinfo_multiple_quickactions_move %}
-                            <li v-if="next1207"
-                                class="sw-media-sidebar__quickaction quickaction--move"
+                            <li class="sw-media-sidebar__quickaction quickaction--move"
                                 @click="openModalMove">
 
                                 <sw-icon small name="default-action-move-file" class="sw-media-sidebar__quickactions-icon"></sw-icon>
