--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -70,7 +70,7 @@
 
                         {% block sw_manufacturer_detail_logo_upload %}
                             <sw-upload-store-listener
-                                :uploadTag="manufacturer.id"
+                                :uploadTag="mediaUploadTag"
                                 autoUpload
                                 @sw-media-upload-finished="setMediaItem">
                             </sw-upload-store-listener>
@@ -79,9 +79,9 @@
                                 class="sw-manufacturer-detail__logo-upload"
                                 :allowMultiSelect="false"
                                 variant="regular"
-                                :uploadTag="manufacturer.id"
+                                :uploadTag="mediaUploadTag"
                                 :label="$tc('sw-manufacturer.detail.labelLogo')"
-                                :defaultFolder="manufacturer.getEntityName()"
+                                :defaultFolder="manufacturerStore.getEntityName()"
                                 @sw-media-upload-media-upload-success="setMediaItem"
                                 @sw-media-upload-remove-image="onUnlinkLogo">
                             </sw-media-upload>
