--- a/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -63,7 +63,7 @@
                                 :allowMultiSelect="false"
                                 variant="regular"
                                 :label="$tc('sw-profile.index.labelUploadAvatar')"
-                                :defaultFolder="user.entityName"
+                                :defaultFolder="user.getEntityName()"
                                 @sw-media-upload-open-sidebar="openMediaSidebar"
                                 @sw-media-upload-remove-image="onUnlinkAvatar">
                             </sw-media-upload>
