--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.scss
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.scss
@@ -17,7 +17,7 @@ $sw-media-folder-item-border-color-highlighted-preview: $color-shopware-blue;
 
         &.is--inner {
             max-width: 32px;
-            margin-top: 2%;
+            transform: translate(-50%, -47%);
         }
     }
 
