--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.scss
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.scss
@@ -55,7 +55,7 @@ $sw-media-sidebar-color-quick-action-danger:  $color-crimson;
 
     .sw-media-sidebar__empty-state-label {
         color: $color-steam-cloud;
-        margin: 0 auto;
+        margin: 8px auto 0;
     }
 
     .sw-media-sidebar__metadata-list {
