--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.scss
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.scss
@@ -186,6 +186,12 @@ $sw-media-base-item-preview-background:      $color-white;
             margin: 0;
             text-align: left;
             font-size: $font-size-small;
+
+            .sw-media-base-item__name-field {
+                input {
+                    text-align: unset;
+                }
+            }
         }
 
         .sw-media-base-item__name {
