NEXT-1676 - Fix intendation

--- a/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.scss
@@ -62,6 +62,9 @@ $sw-order-user-card-link : $color-shopware-blue;
     }
     .sw-order-user-card__address-add-button {
       margin-top: 5px;
+      padding-top: 12px;
     }
   }
+
+
 }
