NEXT-995 - use number ranges in basedata and show in admin

--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -85,8 +85,8 @@
                                           disabled
                                           :label="$tc('sw-settings-number-range.detail.labelCurrentNumber')"
                                           :placeholder="numberRange.start"
-                                          v-if="numberRange.state"
-                                          v-model="numberRange.state.lastNumber">
+                                          v-if="state"
+                                          v-model="state">
                                 </sw-field>
                             {% endblock %}
 
